--- a/data.html
+++ b/data.html
@@ -63,25 +63,23 @@ var info=[];
  async function getData(){
         try{
             let res = await fetch(`https://powerful-harbor-33230.herokuapp.com/posts`);
-            let data = await res.json();
+           info = await res.json();
             
-              console.log(data,"data"); 
-             info.push(data)
+              console.log(info,"data1"); 
+            //  info.push(data)
           
  
-              appendProduct(data)
+              appendProduct(info)
 
         } catch(err){
         console.log('err:', err)
    
         }
     }
+    console.log(info)
     getData()
  
 
-
-
-console.log(info,"finale")
 
 
 
